--- a/responsive.css
+++ b/responsive.css
@@ -1,7 +1,9 @@
 /* タブレット向けレイアウト */
 @media (max-width: 1000px) {
+    img {
     width: 50%;
     margin-bottom: 50px;
+    }
   }
 }
 
@@ -9,6 +11,8 @@
 
 /* ブレイクポイントが670px以下の時のメディアクエリを設定してください */
 @media (max-width: 670px) {
+    img {
     width: 100%;
+    }
   }
   
