--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,10 +7,10 @@ img {
 }
 
 p {
-　　font-size: 25px
+　　font-size: 25px;
 }
 h3 {
-    font-size: 50;
+    font-size: 50px;
 }
 body {
 padding: 10px
