--- a/stylesheet.css
+++ b/stylesheet.css
@@ -22,3 +22,8 @@ padding: 20px
 input, textarea {
     border: 3px solid black;
 }
+
+.contact-submit {
+  background-color: #dee7ec;
+  color: #889eab;
+}
